<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="LblUniFieldDevice" Id="{b8cf2453-6124-4068-be61-234d2272c86d}">
    <Declaration><![CDATA[{region '#Template'}
	{attribute 'Category' := 'GVLs'}
	{attribute 'Version' := '0.0.1.0'}
	{attribute 'Tags' := 'Universal, DPAD, Labels, ObjectName, Description'}
	{attribute 'Description' := 'Universal Labels Kompensation	// Universal labels compensation'}
{endregion}
{attribute 'qualified_only'}
// Universal Feldgeräte
VAR_GLOBAL
//	Universal\Aggregat
	Aggregat_Mdlt						:FB_BA_Label	:= LblFunctions.ControlSignal;
	Aggregat_Cmd						:FB_BA_Label	:= LblFunctions.SwitchingCommand;
	Aggregat_Dst						:FB_BA_Label	:= LblFunctions.Fault;
//	Universal\Damper	
	Dmp_SwiOpn							:FB_BA_Label	:= LblFunctions.FeedbackOPEN;
	Dmp_SwiCls							:FB_BA_Label	:= LblFunctions.FeedbackCLOSED;
	Dmp_Cmd								:FB_BA_Label	:= LblFunctions.SwitchingCommand;
	Dmp_Monit							:FB_BA_Label	:= LblControl.Feedback;
//	Universal\Motor	
	Motor_Dst							:FB_BA_Label	:= LblFunctions.Fault;
	Motor_MntnSwi						:FB_BA_Label	:= LblFunctions.MaintenanceMessage;
	Motor_Cmd							:FB_BA_Label	:= LblFunctions.SwitchingCommand;
	Motor_Mdlt							:FB_BA_Label	:= LblFunctions.ControlSignal;
	Motor_Sp							:FB_BA_Label	:= LblFunctions.Setpoint;
	Motor_Ctrl							:FB_BA_Label	:= LblFunctions.LoopObject;
//	Universal\Pump
	Pump_DlyOff							:FB_BA_Label	:= LblControl.DelayOff;
	Pump_Ablk							:FB_BA_Label	:= LblControl.AntiBlocking;
	Pump_ThOvrld						:FB_BA_Label	:= LblFunctions.Fault;
	Pump_MntnSwi						:FB_BA_Label	:= LblFunctions.MaintenanceMessage;
	Pump_FlowSwi						:FB_BA_Label	:= LblControl.FlowSwitch;
	Pump_FlowMonit						:FB_BA_Label	:= LblAggregates.FlowMonitor;
//	Universal\Sensor
	SensorAnalog_MV_N					:FB_BA_Label	:= LblFunctions.MeasuredValueNorth;
	SensorAnalog_MV_S					:FB_BA_Label	:= LblFunctions.MeasuredValueSouth;
	SensorAnalog_MV_E					:FB_BA_Label	:= LblFunctions.MeasuredValueEast;
	SensorAnalog_MV_W					:FB_BA_Label	:= LblFunctions.MeasuredValueWest;
	SensorAnalog_MV						:FB_BA_Label	:= LblFunctions.MeasuredValue;
	SensorBinary_Input					:FB_BA_Label	:= LblFunctions.Fault;
	SensorButton_Input					:FB_BA_Label	:= LblFunctions.Button;
//	Universal\SmokeDetector	
	SmokeDetector_SmokeAlarm			:FB_BA_Label	:= LblControl.SmokeAlarm;
	SmokeDetector_SystemFailure			:FB_BA_Label	:= LblControl.SystemFailure;
	SmokeDetector_Contamination			:FB_BA_Label	:= LblControl.Contamination;
	SmokeDetector_AirFlow				:FB_BA_Label	:= LblControl.FlowSwitch;
	SmokeDetector_RstHw					:FB_BA_Label	:= LblControl.SwitchingCommandSmokeDetector;
	SmokeDetector_RstRm					:FB_BA_Label	:= LblControl.ButtonReset;
//	Universal\Valve	
	Valve_Ablk							:FB_BA_Label	:= LblControl.AntiBlocking;
	Valve_Fdb							:FB_BA_Label	:= LblFunctions.Feedback;
	Valve_Anlg3Pnt						:FB_BA_Label	:= LblControl.Converter3Point;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>