<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="Texts" Id="{5e7d1fc1-882e-4739-8ac8-77714842583c}">
    <Declaration><![CDATA[{region '#Template'}
	{attribute 'Category' := 'GVLs'}
	{attribute 'Version' := '0.0.1.0'}
	{attribute 'Tags' := 'Property'}
	{attribute 'Description' := 'Textliste Properties	// Text list Properties'}
{endregion}
{attribute 'global_init_slot' := '40510'}
{attribute 'qualified_only'}
VAR_GLOBAL 
//Texts
txtNo						: T_BA_StateText:='Nein';
txtYes						: T_BA_StateText:='Ja';
txtAuto						: T_BA_StateText:='Automatik';
txtManual					: T_BA_StateText:='Hand';
txtOff						: T_BA_StateText:='Aus';
txtOn						: T_BA_StateText:='Ein';
txtOpened					: T_BA_StateText:='Geöffnet';
txtClosed					: T_BA_StateText:='Geschlossen';
txtOpen						: T_BA_StateText:='Auf';
txtClose					: T_BA_StateText:='Zu';
txtStep1					: T_BA_StateText:='Stufe 1 ';
txtStep2					: T_BA_StateText:='Stufe 2';
txtStep3					: T_BA_StateText:='Stufe 3';
txtReleased					: T_BA_StateText:='Freigegeben';
txtInactive					: T_BA_StateText:='Inaktiv';
txtActive					: T_BA_StateText:='Aktiv';
txtNormal					: T_BA_StateText:='Normal';
txtOffnormal				: T_BA_StateText:='Unnormal';
txtAlert					: T_BA_StateText:='Alarm';
txtDisturb					: T_BA_StateText:='Störung';
txtError					: T_BA_StateText:='Fehler ';
txtTriggered				: T_BA_StateText:='Ausgelöst';
txtMaintenace				: T_BA_StateText:='Wartung';
txtExceeded					: T_BA_StateText:='Überschritten';
txtMonitoring				: T_BA_StateText:='Überwachung';
txtProtection				: T_BA_StateText:='Schutzbetrieb';
txtEconomy					: T_BA_StateText:='Economy';
txtPreComfort				: T_BA_StateText:='Pre-Comfort';
txtComfort					: T_BA_StateText:='Comfort';
txtReached					: T_BA_StateText:='erreicht';
txtNotReached				: T_BA_StateText:='nicht erreicht';
txtNone						: T_BA_StateText:='""';
txtEmergencyStop			: T_BA_StateText:='Notaus';
txtFrost					: T_BA_StateText:='Frost';
txtSmokeExtraction_P		: T_BA_StateText:='Entrauchung mit Zu- und Abluft';
txtSmokeExtractionSupplyAir	: T_BA_StateText:='Entrauchung Zuluft';
txtSmokeExtractionExtractAir: T_BA_StateText:='Entrauchung Abluft';
txtCoolDownProtection		: T_BA_StateText:='Auskühlschutz';
txtOverHeatingProtection	: T_BA_StateText:='Überhitzungsschutz';
txtFire						: T_BA_StateText:='Brandalarm';
txtNightCooling				: T_BA_StateText:='Nachtkühlung';
txtForcedVentilation		: T_BA_StateText:='Zwangsbelüftung';
txtCentralSwitchOff			: T_BA_StateText:='Zentralaus';
txtLocked					: T_BA_StateText:='verriegelt';
txtContaminated				: T_BA_StateText:='verschmutzt';
txtStop						: T_BA_StateText:='Stop';
txtCritical					: T_BA_StateText:='kritisch';
txtUnCiritical				: T_BA_StateText:='unkritisch';
txtAverage					: T_BA_StateText:='Mittelwert';
txtHeatCool					: T_BA_StateText:='Heiz/Kühl';
txtAverageHeatCool			: T_BA_StateText:='Mittelwert Heizen/Kühlen';
txtDirection				: T_BA_StateText:='Wirksinn';
                              
txtDefault					: T_BA_StateText:='Standard';
txtCleaning					: T_BA_StateText:='Gebaeudereinigung';
txtNightwatch				: T_BA_StateText:='Nachtwaechter';

txtInvalid					: T_BA_StateText:='Ungueltig';
txtStorm					: T_BA_StateText:='Sturm';
txtIce						: T_BA_StateText:='Vereisung';
txtCommError				: T_BA_StateText:='Kommunikationsstoerung';
txtBurglary					: T_BA_StateText:='Einbruch';
txtMaintenance				: T_BA_StateText:='Wartung';
txtReferencing				: T_BA_StateText:='Referenzieren';
txtManualActuator			: T_BA_StateText:='Handbetrieb lokal';
txtManualGroup				: T_BA_StateText:='Handbetrieb Gruppe';
txtAllDown					: T_BA_StateText:='Alle ab';
txtAllUp					: T_BA_StateText:='Alle hoch';
txtScene1					: T_BA_StateText:='Szene1';
txtFacadeThermoAutomatic	: T_BA_StateText:='Fassaden-Thermoautomatik';
txtFacadeTwilightAutomatic	: T_BA_StateText:='Fassaden-Dämmerungsautomatik';
txtParkPosition				: T_BA_StateText:='Parkposition';
txtScene2					: T_BA_StateText:='Szene2';
txtScene3					: T_BA_StateText:='Szene3';
txtSunProtection			: T_BA_StateText:='Sonnenschutz';
txtGroupThermoAuto			: T_BA_StateText:='Gruppen-Thermoautomatik';
txtGroupTwiLightAuto		: T_BA_StateText:='Gruppen-Dämmerungsautomatik';

// Device_Types
devRelais							: STRING    := ' Relaise';
devPotentiometer					: STRING    := ' Potentiometer';
devFuse								: STRING    := ' Sicherung';
devSwitch							: STRING    := ' Schalter';
devLimitSwitch						: STRING    := ' Endlagenschalter';
devMtnSwitch						: STRING    := ' Wartungsschalter';
devCabinetLamp						: STRING    := ' Schaltschranklampe';
devPushButton						: STRING    := ' Taster';
devMotor							: STRING    := ' Motor';
devPump								: STRING    := ' Pumpe';
devFan								: STRING    := ' Ventilator';
devValve							: STRING    := ' Ventil';
devFC								: STRING    := ' FC';
devVAV								: STRING    := ' Volumenstromregler';
devDamper							: STRING    := ' Klappe';
devSen								: STRING    := ' Sensor';
devSen_Humidity						: STRING    := ' Feuchtefühler';
devSen_Pressure						: STRING    := ' Druckfühler';
devSen_Temperature					: STRING    := ' Temperaturfühler';
devSen_Flow							: STRING    := ' Volumenstromfühler';
devSen_Enthalpy						: STRING    := ' Enthalpiefühler';
devSen_SmokeDetector				: STRING    := ' Rauchmelder';
devDifferentialPressureSwitch		: STRING    := ' Differenzdruckschalter';
devThermostat						: STRING    := ' Thermostat';
devPressostat						: STRING    := ' Druchschalter';
devHygrostat						: STRING    := ' Hygrostat';
devView								: STRING    := ' Ordner/Programm';
devInputAnalogValue					: STRING    := ' Eingabe Analogwert';
devDisplayAnalogValue				: STRING    := ' Anzeige Analogwert';
devInputBinaryValue					: STRING    := ' Eingabe Dititalwert';
devDisplayBinaryValue				: STRING    := ' Anzeige Digitalwert';
devControlCommandOutput				: STRING    := ' Stellwert Ausgang';
devLoop								: STRING    := ' Regler ';
devInputMultiStateValue				: STRING    := ' Eingabe Multi State Wert';
devDisplayMultiStateValue			: STRING    := ' Anzeige Multi State Wert';
devThermalCircuitBreaker			: STRING    := ' Thermoschutz';

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>