<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_BA_2WayButton_IO" Id="{3dbe968e-87cf-49df-99fd-5e696ba9a413}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_BA_2WayButton_IO EXTENDS FB_BA_VIEW
VAR_INPUT
END_VAR
VAR_INPUT CONSTANT
	Swi1					: FB_BA_BI_IO;		
	Swi2					: FB_BA_BI_IO;		
END_VAR
VAR_OUTPUT
	bPresentValue1			: BOOL;	
	bPresentValue2			: BOOL;	
END_VAR
VAR
END_VAR]]></Declaration>
    <Implementation>
      <CFC>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="CFCImplementationObject">
              <o n="Items" t="CFCItemList">
                <l2 n="InnerList">
                  <o t="CFCConnection">
                    <v n="Bounds">"2, 2, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">38L</v>
                    <v n="DestPinId">44L</v>
                    <v n="Id">46L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"-2, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">27L</v>
                    <v n="DestPinId">33L</v>
                    <v n="Id">35L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_BA_View"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">23L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"SUPER^"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">24L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"1, 1, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">FunctionBlock</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">22L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCOutputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">26L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">27L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bEvent"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">28L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bPresentValue"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">29L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_BA_BI_IO"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">30L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"Swi1"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">31L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"1, 6, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">FunctionBlock</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">25L</v>
                  </o>
                  <o t="CFCOutputElement">
                    <o n="Input" t="CFCInputPinWithSetReset">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="ProcessValue">""</v>
                      <v n="Access" t="ProcessValueAccess">None</v>
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">33L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"bPresentValue1"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">34L</v>
                    </o>
                    <v n="PageArea">4</v>
                    <v n="Bounds">"12, 9, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">32L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCOutputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">37L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">38L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bEvent"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">39L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bPresentValue"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">40L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_BA_BI_IO"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">41L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"Swi2"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">42L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"1, 11, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">FunctionBlock</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">36L</v>
                  </o>
                  <o t="CFCOutputElement">
                    <o n="Input" t="CFCInputPinWithSetReset">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="ProcessValue">""</v>
                      <v n="Access" t="ProcessValueAccess">None</v>
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">44L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"bPresentValue2"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">45L</v>
                    </o>
                    <v n="PageArea">4</v>
                    <v n="Bounds">"12, 14, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">43L</v>
                  </o>
                </l2>
              </o>
              <n n="ParameterInitializationMethodGenerator" />
              <o n="RoutingPathTable" t="CFCRoutingPathTable">
                <d2 n="InnerDictionary" ckt="CFCRoutingConnection" cvt="CFCPointList">
                  <o>
                    <v n="ConnectionId">35L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">9</v>
                      <v n="Y">9</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">9</v>
                        <v n="Y">9</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">11</v>
                        <v n="Y">9</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">46L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">9</v>
                      <v n="Y">14</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">9</v>
                        <v n="Y">14</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">11</v>
                        <v n="Y">14</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                </d2>
              </o>
              <v n="AutoSizeCanvas">true</v>
              <v n="CanvasWidth">22</v>
              <v n="CanvasHeight">17</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="CFCBoxElement">{f5becf35-b1f3-4274-b411-81d4b63a1516}</Type>
            <Type n="CFCConnection">{5ae2e111-ecff-4a21-b647-2d4da63f8db7}</Type>
            <Type n="CFCImplementationObject">{32d3375e-c010-41e2-9e43-b2fbf4f2b374}</Type>
            <Type n="CFCInputPinWithSetReset">{5c3476a8-05c5-430e-861c-9cfa51d68ca8}</Type>
            <Type n="CFCItemList">{cd57ba20-558b-4b98-96c1-73c6000c3087}</Type>
            <Type n="CFCOutputElement">{8d9e2b78-3efe-4fe4-8160-f3a7381ddd8f}</Type>
            <Type n="CFCOutputPin">{65582d84-cf18-4ca0-be59-bf5a3d00b8f8}</Type>
            <Type n="CFCPoint">{b3e42b54-b8f2-45d3-825d-747f82f244a0}</Type>
            <Type n="CFCPointList">{584effbc-813e-443a-bf78-ad9c8d49db41}</Type>
            <Type n="CFCRoutingConnection">{93c117eb-0884-403b-b01e-28b89f47e041}</Type>
            <Type n="CFCRoutingPathTable">{4b8bcc79-5980-4868-b49e-005a8148859b}</Type>
            <Type n="CFCText">{72f2b13f-5349-4a8a-bbe6-2bccf3f42179}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="KindOfCall">{77f43dfe-ca6a-4869-828f-7609d8ed6ea6}</Type>
            <Type n="ProcessValueAccess">{88453c7d-d652-4a27-a1b0-a1953be49a5c}</Type>
            <Type n="SetReset">{24449d48-c96a-49c4-b9d1-a4ea34aedce3}</Type>
            <Type n="SetResetRef">{233bc97c-69fe-4d29-b40e-a9a9b854044e}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </CFC>
    </Implementation>
    <Method Name="FB_init" Id="{cc5b5b4c-5563-47a7-af0b-dd55ebace0bc}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Swi1.iParent					:= THIS^;
Swi1.iLabel						:= LblUniFieldDevice.SensorButton_Input;	
Swi1.sObjectName				:= '{Idx=01}';	
Swi1.sDeviceType				:= '';
Swi1.bEnOutOfService			:= FALSE;
Swi1.ePolarity					:= E_BA_Polarity.eNormal;
Swi1.sActiveText 				:= Texts.txtOn;
Swi1.sInactiveText 				:= Texts.txtOff;
Swi1.nStateChangeCount			:= 0;
Swi1.nActiveTimeElapsed			:= 0;
Swi1.nEventClassID				:= EventClasses.NotificationSimple;
Swi1.stTimeDelay.nToNormal		:= BA2_Param.nDefTimeDelay_ToNormal;
Swi1.stTimeDelay.nToAbnormal	:= BA2_Param.nDefTimeDelay_ToAbnormal;
Swi1.bAlarmValue				:= TRUE;
Swi1.bAcknowledgeRm				:= FALSE;		
Swi1.aEventTransitionText[1]	:= Texts.txtOff;
Swi1.aEventTransitionText[2]	:= Texts.txtNone;
Swi1.aEventTransitionText[3]	:= Texts.txtOn;
Swi1.bEventDetectionEnable		:= FALSE;
Swi1.eEnPlantLock				:= E_BA_LockPriority.eNoLock;	

Swi2.iParent					:= THIS^;
Swi2.iLabel						:= LblUniFieldDevice.SensorButton_Input;	
Swi2.sObjectName				:= '{Idx=02}';	
Swi2.sDeviceType				:= '';
Swi2.bEnOutOfService			:= FALSE;
Swi2.ePolarity					:= E_BA_Polarity.eNormal;
Swi2.sActiveText 				:= Texts.txtOn;
Swi2.sInactiveText 				:= Texts.txtOff;
Swi2.nStateChangeCount			:= 0;
Swi2.nActiveTimeElapsed			:= 0;
Swi2.nEventClassID				:= EventClasses.NotificationSimple;
Swi2.stTimeDelay.nToNormal		:= BA2_Param.nDefTimeDelay_ToNormal;
Swi2.stTimeDelay.nToAbnormal	:= BA2_Param.nDefTimeDelay_ToAbnormal;
Swi2.bAlarmValue				:= TRUE;
Swi2.bAcknowledgeRm				:= FALSE;		
Swi2.aEventTransitionText[1]	:= Texts.txtOff;
Swi2.aEventTransitionText[2]	:= Texts.txtNone;
Swi2.aEventTransitionText[3]	:= Texts.txtOn;
Swi2.bEventDetectionEnable		:= FALSE;
Swi2.eEnPlantLock				:= E_BA_LockPriority.eNoLock;	]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_BA_2WayButton_IO.FB_init">
      <LineId Id="75" Count="1" />
      <LineId Id="78" Count="0" />
      <LineId Id="502" Count="0" />
      <LineId Id="343" Count="0" />
      <LineId Id="542" Count="1" />
      <LineId Id="335" Count="0" />
      <LineId Id="505" Count="0" />
      <LineId Id="504" Count="0" />
      <LineId Id="336" Count="0" />
      <LineId Id="512" Count="1" />
      <LineId Id="509" Count="0" />
      <LineId Id="544" Count="2" />
      <LineId Id="350" Count="0" />
      <LineId Id="571" Count="0" />
      <LineId Id="521" Count="0" />
      <LineId Id="549" Count="11" />
      <LineId Id="562" Count="6" />
      <LineId Id="570" Count="0" />
      <LineId Id="548" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>